tests/typing/bad/testfile-enum-3.rs



enum Bool {
    True,
    False(Info),
}

struct Info {
    field : Bool,
}


fn main() {
    let x = Bool::True;
}